# sagittal_average

./: pyproject.toml
src/sagittal_brain/: __init__.py  sagittal_brain.py
tests/: test_run_average.py
