[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagittal-brain"
version = "0.1.0"
dependencies = [
    "numpy",
]

[project.scripts]
sagittal-brain-avg = "sagittal_brain.sagittal_brain:main"

[tool.hatch.build.targets.wheel]
packages = [
  "src/sagittal_brain",
]